--- a/88_業務知識/02_小売/在庫管理システムの業務知識.md
+++ b/88_業務知識/02_小売/在庫管理システムの業務知識.md
@@ -547,9 +547,17 @@
 ```
 ┌─────────────────────────────────────────────────────┐
 │          利用者（業務）                              │
-│  購買 / 販売 / 生産 / 倉庫                           │
+│  購買 / 販売 / 生産 / 倉庫 / 管理者                   │
 └──────────────┬──────────────────────────────────────┘
                │ Web / API
+               ▼  (認証・認可)
+┌─────────────────────────────────────────────────────┐
+│        IAM / 認証認可基盤（SSO）                      │
+│  ・役割別権限（RBAC）                                 │
+│  ・職務分掌（SoD）                                    │
+│  ・操作ログ（誰が・いつ・何を）                        │
+└──────────────┬───────────────────────────────────────┘
+               │
                ▼
 ┌─────────────────────────────────────────────────────┐
 │        基幹業務システム層                             │
@@ -558,8 +566,9 @@
 │  │ 在庫管理システム（基幹）                   │       │
 │  │ ・理論在庫                                │       │
 │  │ ・在庫引当                                │       │
-│  │ ・在庫区分                                │       │
+│  │ ・在庫区分（良品/不良/保留）                │       │
 │  │ ・在庫評価                                │       │
+│  │ ・承認ワークフロー                         │       │
 │  └──────────────────────────────────────────┘       │
 │        ▲          ▲          ▲          ▲           │
 │        │          │          │          │           │
@@ -571,19 +580,22 @@
 │                                                     │
 │                                                     │
 └──────────────┬──────────────────────────────────────┘
-               │ 指示／実績連携
+               │ 指示／実績連携（IF制御）
                ▼
 ┌─────────────────────────────────────────────────────┐
 │        WMS（倉庫管理システム）                        │
 │  ・物理在庫管理（ロケーション）                        │
-│  ・入荷／出庫／移動指示                                │
+│  ・作業指示（入荷/出庫/移動）                          │
 │  ・作業実績管理                                       │
+│  ・実績記録（変更不可ログ）                            │
+│  ・スキャン必須（バーコード/RFID）                     │
 └──────────────┬───────────────────────────────────────┘
-               │
+               │ 
                ▼
 ┌──────────────────────────────────────────────────────┐
 │        倉庫現場オペレーション                          │
-│  ハンディ端末 / RFID / 自動倉庫                        │
+│  ハンディ端末 / RFID / 自動倉庫 / マテハン機器          │
+│  ※手入力禁止・スキャン必須                            │
 └──────────────────────────────────────────────────────┘
 ```
 
