--- a/01_開発/99_管理/01_プロジェクト管理（PM）/自治体システム標準準拠/04_品質管理計画.md
+++ b/01_開発/99_管理/01_プロジェクト管理（PM）/自治体システム標準準拠/04_品質管理計画.md
@@ -225,3 +225,655 @@
 です。
 
 ---
+---
+
+# ◆ 品質管理計画書（自治体決裁用）
+
+---
+
+## 1. 文書概要
+
+### 1.1 文書目的
+
+本品質管理計画書は、自治体システム標準準拠（デジタル庁標準仕様書・ガバメントクラウド利用前提）に基づき実施される本プロジェクトにおいて、各工程で確保すべき品質方針、品質基準、品質管理方法および管理体制を明確化し、成果物の妥当性・完全性・標準準拠性を確実に担保することを目的とする。
+
+### 1.2 適用範囲
+
+本計画書は、以下の工程および成果物に適用する。
+
+* 要件定義工程
+* 設計工程（基本設計・詳細設計）
+* 開発・設定工程
+* テスト工程
+* 移行・本番切替工程
+
+### 1.3 関連文書
+
+* デジタル庁 標準仕様書（対象業務システム）
+* プロジェクト計画書
+* 要件定義書
+* 試験計画書
+* 移行計画書
+
+---
+
+## 2. 品質方針および品質目標
+
+### 2.1 品質方針
+
+本プロジェクトでは、デジタル庁が定める標準仕様書への完全準拠を最優先とし、自治体業務の継続性および住民サービスへの影響を最小化することを品質方針とする。
+また、将来の制度改正、他団体展開、ベンダー交代を考慮し、説明可能性および再現性の高い成果物を作成する。
+
+### 2.2 品質目標（KPI）
+
+| 区分   | 品質目標           |
+| ---- | -------------- |
+| 標準準拠 | 標準仕様適合率 100%   |
+| レビュー | 指摘事項是正完了率 100% |
+| 不具合  | 本番障害 0件        |
+| 文書品質 | 承認未取得成果物 0件    |
+
+---
+
+## 3. 品質管理体制
+
+### 3.1 体制概要
+
+品質管理は、発注者（自治体）、受注者（SIer）、PL/PM支援者が役割分担のもと実施する。
+
+### 3.2 役割・責任
+
+| 役割       | 主な責任              |
+| -------- | ----------------- |
+| 発注者（自治体） | 成果物承認、品質判断、最終責任   |
+| PL/PM支援  | 品質統制、第三者レビュー、是正指示 |
+| SIer PM  | 工程管理、成果物品質確保      |
+| QA担当     | レビュー運営、不具合管理      |
+
+---
+
+## 4. 管理対象成果物および品質基準
+
+### 4.1 管理対象成果物
+
+| 工程   | 成果物               |
+| ---- | ----------------- |
+| 要件定義 | 要件定義書、Fit & Gap一覧 |
+| 設計   | 基本設計書、詳細設計書       |
+| 開発   | ソースコード、設定定義書      |
+| テスト  | 試験計画書、試験結果報告書     |
+| 移行   | 移行計画書、移行検証結果      |
+
+### 4.2 品質基準
+
+* 完全性：必須項目の記載漏れがないこと
+* 妥当性：業務要件および法令要件と整合していること
+* 一貫性：他成果物と矛盾がないこと
+* 標準準拠性：標準仕様書への適合が確認できること
+* 証跡性：判断根拠が文書で明示されていること
+
+---
+
+## 5. 工程別品質管理方法
+
+### 5.1 要件定義工程
+
+* 標準仕様項番単位でのトレーサビリティ管理
+* Fit & Gap妥当性レビューの実施
+* 非機能要件（性能・可用性・セキュリティ）の重点確認
+
+### 5.2 設計工程
+
+* 要件トレーサビリティ確認
+* 標準機能優先設計の遵守確認
+* 個別カスタマイズ抑制チェック
+
+### 5.3 開発工程
+
+* コーディング規約遵守確認
+* 静的解析およびセキュリティチェック
+
+### 5.4 テスト工程
+
+* 要件ベース試験の網羅性確認
+* 標準仕様適合試験の実施
+
+---
+
+## 6. レビュー計画
+
+### 6.1 レビュー種別
+
+| レビュー種別  | 実施主体    |
+| ------- | ------- |
+| 内部レビュー  | SIer    |
+| 第三者レビュー | PL/PM支援 |
+| 承認レビュー  | 自治体     |
+
+### 6.2 主なレビュー観点
+
+* 標準仕様準拠性
+* 業務適合性
+* 将来制度改正耐性
+* 他団体展開可能性
+
+---
+
+## 7. 不具合管理および是正管理
+
+* 不具合は重大度（Critical/High/Medium/Low）で管理する
+* 原因分析および再発防止策を必ず記録する
+* 是正完了は再発防止策の確認をもって完了とする
+
+---
+
+## 8. 標準仕様適合性管理
+
+* 標準仕様項番ごとの対応表を作成する
+* 未対応または代替対応がある場合は理由を明記する
+* 標準仕様改訂時は影響評価を実施する
+
+---
+
+## 9. 品質評価および報告
+
+* 定例会にて品質状況を報告する
+* 品質KPI、不具合件数、標準準拠状況を可視化する
+* 重大な品質リスクは速やかに共有する
+
+---
+
+## 10. 監査・検査対応
+
+* 監査観点を事前整理し、成果物・証跡を即時提示可能とする
+* 監査対応時の説明責任はPL/PM支援およびSIerが補佐する
+
+---
+
+この品質管理計画書の内容は、
+
+* ✅ 自治体内部決裁に耐える構成
+* ✅ デジタル庁標準仕様・標準準拠監査を意識
+* ✅ 「品質＝説明責任」を前提とした記述
+* ✅ PL/PM支援が前面に出過ぎないが、統制が効く設計
+
+を意図しています。
+
+---
+
+### 実務での使い方（重要）
+
+* **そのまま決裁資料に添付可能**
+* 個別案件では以下だけ差し替えれば十分です
+
+  * 対象業務（例：住民記録／税／福祉 等）
+  * 適用標準仕様名
+  * 体制（組織名・役割名）
+
+---
+---
+
+# ◆ 工程別品質チェックリスト（自治体システム標準準拠）
+
+本チェックリストは、品質管理計画書に基づき、各工程において成果物の品質・標準準拠性・説明可能性を確認するためのものである。自治体決裁、監査、SIer統制に利用することを前提とする。
+
+---
+
+## 1. 要件定義工程 品質チェックリスト
+
+### 1.1 全体要件
+
+* [ ] 対象業務範囲が明確に定義されているか
+* [ ] 業務フローが現行・新業務ともに整理されているか
+* [ ] 法令・条例・通知等が網羅されているか
+* [ ] 標準仕様書の対象範囲が明確か
+
+### 1.2 標準仕様準拠
+
+* [ ] 標準仕様項番単位での対応関係が整理されているか
+* [ ] 標準機能を前提とした要件定義となっているか
+* [ ] 非標準要件（例外・独自要件）が明確化されているか
+* [ ] 非標準要件の妥当性理由が記載されているか
+
+### 1.3 Fit & Gap
+
+* [ ] Fit/GAPの判定基準が明示されているか
+* [ ] GAPに対する対応方針（業務変更／代替対応）が定義されているか
+* [ ] 将来の制度改正への影響が整理されているか
+
+### 1.4 非機能要件
+
+* [ ] 性能要件が定量的に定義されているか
+* [ ] 可用性・冗長性要件が明確か
+* [ ] セキュリティ・個人情報保護要件が網羅されているか
+
+---
+
+## 2. 基本設計工程 品質チェックリスト
+
+### 2.1 要件トレーサビリティ
+
+* [ ] 要件定義書との対応関係が明確か
+* [ ] 未対応要件が存在しないか
+
+### 2.2 アーキテクチャ設計
+
+* [ ] ガバメントクラウド利用方針に準拠しているか
+* [ ] 標準的な構成（再利用性）が確保されているか
+* [ ] 特定ベンダー依存の設計となっていないか
+
+### 2.3 機能設計
+
+* [ ] 標準機能優先で設計されているか
+* [ ] 個別カスタマイズが最小限か
+* [ ] 業務例外処理が整理されているか
+
+### 2.4 非機能設計
+
+* [ ] 性能・負荷設計が要件を満たしているか
+* [ ] セキュリティ設計が自治体基準に適合しているか
+
+---
+
+## 3. 詳細設計工程 品質チェックリスト
+
+### 3.1 設計網羅性
+
+* [ ] 画面・帳票・バッチ・IFが網羅されているか
+* [ ] 入出力項目が定義されているか
+
+### 3.2 データ設計
+
+* [ ] 標準データ項目が遵守されているか
+* [ ] 個人情報区分が明示されているか
+
+### 3.3 例外・エラー処理
+
+* [ ] 異常系が設計されているか
+* [ ] エラーメッセージが適切か
+
+---
+
+## 4. 開発・設定工程 品質チェックリスト
+
+### 4.1 実装品質
+
+* [ ] 設計書どおりに実装されているか
+* [ ] コーディング規約が遵守されているか
+
+### 4.2 セキュリティ
+
+* [ ] 脆弱性対策が実装されているか
+* [ ] 権限・認証処理が適切か
+
+---
+
+## 5. テスト工程 品質チェックリスト
+
+### 5.1 試験計画
+
+* [ ] 試験観点が要件を網羅しているか
+* [ ] 標準仕様適合試験が含まれているか
+
+### 5.2 試験実施
+
+* [ ] 試験結果が記録されているか
+* [ ] 不具合の是正が完了しているか
+
+---
+
+## 6. 移行・本番切替工程 品質チェックリスト
+
+### 6.1 移行計画
+
+* [ ] 移行対象データが明確か
+* [ ] 移行リハーサルが実施されているか
+
+### 6.2 本番切替
+
+* [ ] 切替手順が文書化されているか
+* [ ] 障害時の切戻し手順が定義されているか
+
+---
+
+## 7. 横断チェック（全工程共通）
+
+* [ ] 標準仕様改訂への追従状況が確認されているか
+* [ ] 成果物に承認印（電子承認）が付与されているか
+* [ ] 説明責任（根拠資料）が確保されているか
+
+---
+
+※ 本チェックリストは、品質管理計画書と一体で運用すること。
+
+---
+
+この工程別品質チェックリスト（自治体システム標準準拠）は **品質管理計画書と完全対応** する形で、
+
+* ✅ 自治体決裁・監査でそのまま提示できる
+* ✅ PL/PM支援がレビュー・是正指示に使える
+* ✅ SIer統制（「どこが未達か」を客観的に示せる）
+
+ことを重視した構成です。
+
+---
+
+## 実務での使い方（重要）
+
+### ① レビュー時
+
+* 各工程レビューで **Yes / No / 条件付き** を付与
+* No／条件付きは **是正内容・期限・責任者** を必ず記載
+
+### ② 決裁時
+
+* チェックリストを **品質エビデンス** として添付
+* 「品質は確認済み」を形式ではなく **事実で説明可能**
+
+### ③ 監査・検査時
+
+* 「どの工程で、何を、どう確認したか」を即提示可能
+* 標準準拠・非標準（GAP）の判断根拠として使用
+
+---
+---
+# ◆ 品質管理 実施結果報告書（自治体決裁用）
+
+---
+
+## 1. 文書概要
+
+### 1.1 文書目的
+
+本報告書は、自治体システム標準準拠に基づき実施した品質管理活動の結果について整理・報告し、各工程における品質確保状況、標準仕様適合状況および是正対応結果を明確にするとともに、自治体としての最終判断・決裁に資することを目的とする。
+
+### 1.2 対象プロジェクト概要
+
+* プロジェクト名称：＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿
+* 対象業務システム：＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿
+* 適用標準仕様：デジタル庁 標準仕様書（対象業務）
+* 実施期間：＿＿年＿＿月＿＿日 ～ ＿＿年＿＿月＿＿日
+
+---
+
+## 2. 品質管理の実施体制
+
+| 役割        | 組織名  | 主な責任         |
+| --------- | ---- | ------------ |
+| 発注者（自治体）  | ＿＿＿＿ | 成果物承認、最終判断   |
+| PL/PM支援   | ＿＿＿＿ | 品質統制、第三者レビュー |
+| 受注者（SIer） | ＿＿＿＿ | 成果物作成、是正対応   |
+| QA担当      | ＿＿＿＿ | 不具合管理、レビュー運営 |
+
+---
+
+## 3. 品質管理実施概要
+
+### 3.1 実施方針
+
+品質管理計画書に基づき、各工程においてレビューおよび品質チェックを実施し、標準仕様への適合性、成果物の妥当性および説明可能性を重点的に確認した。
+
+### 3.2 実施内容一覧
+
+| 工程   | 主な品質管理活動           | 実施結果 |
+| ---- | ------------------ | ---- |
+| 要件定義 | 要件レビュー、Fit & Gap確認 | 完了   |
+| 基本設計 | 設計レビュー、標準準拠確認      | 完了   |
+| 詳細設計 | 詳細設計レビュー           | 完了   |
+| 開発   | 実装確認、静的解析          | 完了   |
+| テスト  | 試験結果確認             | 完了   |
+| 移行   | 移行検証確認             | 完了   |
+
+---
+
+## 4. 工程別 品質確認結果
+
+### 4.1 要件定義工程
+
+* 標準仕様項番単位での対応関係を確認
+* 非標準要件（GAP）については妥当性理由および代替対応を確認
+* 重大な品質問題は認められなかった
+
+### 4.2 設計工程（基本・詳細）
+
+* 要件トレーサビリティを確認
+* 標準機能優先設計が遵守されていることを確認
+* 指摘事項は是正済み
+
+### 4.3 開発工程
+
+* 設計書との整合性を確認
+* セキュリティ・権限設計に問題は認められなかった
+
+### 4.4 テスト工程
+
+* 要件ベース試験の網羅性を確認
+* 重大不具合は検出されなかった
+
+### 4.5 移行・本番切替工程
+
+* 移行リハーサル結果を確認
+* 切戻し手順が整備されていることを確認
+
+---
+
+## 5. 不具合・是正対応状況
+
+| 区分       | 件数 | 対応状況   |
+| -------- | -- | ------ |
+| Critical | 0  | －      |
+| High     | 0  | －      |
+| Medium   | ＿＿ | 全件是正完了 |
+| Low      | ＿＿ | 全件是正完了 |
+
+※ 是正対応は再発防止策の確認をもって完了としている。
+
+---
+
+## 6. 標準仕様適合性評価
+
+* 標準仕様適合率：100%
+* 未対応項番：なし
+* 代替対応項番：＿＿（妥当性確認済）
+
+標準仕様書に定められた必須要件については、すべて対応済みであることを確認した。
+
+---
+
+## 7. 品質評価総括
+
+本プロジェクトにおける品質管理活動の結果、各工程の成果物は品質管理計画書に定めた品質基準を満たしており、標準仕様への適合性、業務妥当性および説明可能性が確保されていると判断する。
+
+---
+
+## 8. 決裁依頼事項
+
+上記の品質管理実施結果を踏まえ、以下について決裁をお願いしたい。
+
+* 本プロジェクト成果物の品質妥当性の承認
+* 次工程（または本番稼働）への移行承認
+
+---
+
+この「品質管理 実施結果報告書（自治体決裁用）」書は、これまで作成した
+
+* 品質管理計画書
+* 工程別品質チェックリスト
+
+と **完全に整合** する構成になっています。
+
+---
+
+## この報告書の“決裁向けとしての強み”
+
+### ✅ 1. 判断しやすい
+
+* 「品質は問題なし」と言い切るのではなく
+  **どの工程で、何を確認し、どう判断したか** を明示
+
+### ✅ 2. 監査耐性が高い
+
+* 標準仕様適合率
+* 不具合件数と是正完了状況
+* 第三者（PL/PM支援）関与の明示
+
+が揃っており、**後日の説明にも耐える**
+
+### ✅ 3. ベンダー依存にならない
+
+* 「SIerの自己評価」ではなく
+  **統制された品質確認結果** として整理
+
+---
+
+## 実務での使い分け（重要）
+
+| シーン      | 使い方                |
+| -------- | ------------------ |
+| 部内決裁     | 本書＋工程別チェックリスト添付    |
+| 首長・副市長説明 | 3章・6章・7章のみ抜粋       |
+| 監査       | 4章・5章・6章を根拠資料として提示 |
+| トラブル時    | 「品質確認は実施済み」の証跡     |
+
+---
+---
+# ◆ 品質是正指示書（SIer向け・正式文書）
+
+---
+
+## 1. 文書概要
+
+### 1.1 文書目的
+
+本指示書は、自治体システム標準準拠プロジェクトにおいて実施した品質レビューおよび品質チェックの結果、確認された品質上の不備・不足事項について、受注者（SIer）に対し是正対応を正式に指示することを目的とする。
+
+本指示は、品質管理計画書および工程別品質チェックリストに基づくものであり、契約およびプロジェクト統制上の正式な指示として位置付ける。
+
+### 1.2 対象プロジェクト
+
+* プロジェクト名称：＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿
+* 対象業務システム：＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿
+* 契約番号（任意）：＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿
+
+### 1.3 指示日
+
+* 指示日：＿＿年＿＿月＿＿日
+
+---
+
+## 2. 是正指示の根拠
+
+本是正指示は、以下の資料および確認結果を根拠として発行する。
+
+* 品質管理計画書
+* 工程別品質チェックリスト
+* 各工程レビュー結果
+* 品質管理 実施結果報告書（指摘事項一覧）
+
+---
+
+## 3. 是正指示事項一覧
+
+以下に示す品質上の指摘事項について、期限内に是正対応を実施し、是正完了報告を提出すること。
+
+| No | 工程     | 成果物名  | 指摘内容               | 是正内容         | 期限    | 対応責任者 |
+| -- | ------ | ----- | ------------------ | ------------ | ----- | ----- |
+| 1  | 例：基本設計 | 基本設計書 | 標準仕様項番○○との対応関係が不明確 | 対応表を修正し根拠を明記 | ＿＿/＿＿ | ＿＿    |
+| 2  |        |       |                    |              |       |       |
+
+---
+
+## 4. 是正対応に関する留意事項
+
+1. 是正内容は、単なる修正に留まらず、**発生原因および再発防止策**を明確にすること。
+2. 是正後の成果物は、影響範囲（他成果物・工程）を整理した上で提出すること。
+3. 標準仕様に関わる是正については、標準仕様項番単位での説明資料を添付すること。
+4. 是正未完了の成果物については、次工程への進行を認めない。
+
+---
+
+## 5. 是正完了の判断基準
+
+以下の条件をすべて満たした場合に、是正完了と判断する。
+
+* 指摘事項に対する修正が確認できること
+* 再発防止策が文書化されていること
+* 関連成果物への影響が反映されていること
+* 発注者（自治体）またはPL/PM支援による確認が完了していること
+
+---
+
+## 6. 是正完了報告について
+
+是正対応完了後、以下を含む是正完了報告書を提出すること。
+
+* 指摘事項No.ごとの対応内容
+* 修正箇所一覧（差分明示）
+* 原因分析および再発防止策
+* 影響範囲確認結果
+
+---
+
+## 7. 本指示書の位置付け
+
+本指示書は、契約および品質管理計画に基づく正式な是正指示であり、受注者は誠実かつ速やかに対応する義務を負う。
+
+---
+
+この「SIer向け 品質是正指示書（正式文書）」は、これまで整備してきた
+
+* 品質管理計画書
+* 工程別品質チェックリスト
+* 品質管理 実施結果報告書
+
+と **完全に連動** する、**自治体がSIerを公式に是正指示するための文書** です。
+
+---
+
+## この是正指示書の“効くポイント”
+
+### ✅ 1. 「お願い」ではなく正式指示
+
+* 契約・品質管理計画を根拠にしており
+  **SIer側が無視できない位置付け**
+
+### ✅ 2. 次工程ストップの根拠になる
+
+* 「是正未完了の場合は次工程へ進ませない」を明文化
+* 工程ゲート管理としてそのまま使える
+
+### ✅ 3. 再発防止まで要求できる
+
+* 単なる修正ではなく
+  **原因分析・再発防止策までが完了条件**
+
+---
+
+## 実務での使い分け（かなり重要）
+
+| シーン    | 使い方              |
+| ------ | ---------------- |
+| 軽微指摘   | 指示事項一覧を抜粋して通知    |
+| 重大品質問題 | 本書を正式発行（文書番号付与）  |
+| トラブル時  | 「是正指示済み」の証跡として提示 |
+| 監査     | 品質統制の実施証拠として提出   |
+
+---
+
+## これで「品質統制一式」が完成しました
+
+現時点で、以下がすべて揃っています。
+
+* ✅ 品質管理計画書
+* ✅ 工程別品質チェックリスト
+* ✅ 品質管理 実施結果報告書
+* ✅ SIer向け 品質是正指示書
+
+これは **自治体システム標準準拠PJの模範的セット** です。
+
+---
+
+
+
+
+
