--- a/01_開発/99_管理/01_プロジェクト管理（PM）/自治体システム標準準拠/04_品質管理計画.md
+++ b/01_開発/99_管理/01_プロジェクト管理（PM）/自治体システム標準準拠/04_品質管理計画.md
@@ -84,7 +84,7 @@
 | SIer PM  | 実装品質の確保        |
 | QA担当     | レビュー運営、不具合管理   |
 
-👉 **PL/PM支援は「品質の番人」**として明確に位置づけるのが重要です。
+👉 **PL/PM支援は**「**品質の番人**」として明確に位置づけるのが重要です。
 
 ---
 
