--- a/01_開発/99_管理/01_プロジェクト管理（PM）/自治体システム標準準拠/05_全体テスト計画.md
+++ b/01_開発/99_管理/01_プロジェクト管理（PM）/自治体システム標準準拠/05_全体テスト計画.md
@@ -196,4 +196,811 @@
 * 後年の監査を想定
 
 ---
+---
 
+# ◆ 全体テスト計画書（自治体システム標準準拠）
+
+## 1. 文書情報
+
+| 項目     | 内容            |
+| ------ | ------------- |
+| 文書名    | 全体テスト計画書      |
+| 対象システム | （システム名称）      |
+| 対象業務   | （標準業務名／独自業務名） |
+| 作成日    | YYYY年MM月DD日   |
+| 作成者    | （事業者名）        |
+| 承認者    | （自治体名／部課名）    |
+| 版数     | Ver.X.X       |
+
+---
+
+## 2. 目的
+
+本書は、デジタル庁が定める自治体情報システム標準仕様書に基づき構築される対象システムについて、
+**機能品質・標準準拠性・運用妥当性・業務継続性**をテストにより検証し、
+本番稼働可否を自治体として判断するための全体的なテスト方針および計画を定めるものである。
+
+---
+
+## 3. 前提・関連資料
+
+* デジタル庁 自治体情報システム標準仕様書（該当業務）
+* 要件定義書
+* 基本設計書／詳細設計書
+* Fit & Gap一覧
+* 外部連携仕様書
+* データ移行計画書
+
+---
+
+## 4. テスト基本方針
+
+### 4.1 基本方針
+
+* 標準仕様への適合性を**テスト結果として客観的に証明**する
+* 住民サービスに影響する機能を重点的に検証する
+* 本番運用を想定したシナリオでテストを実施する
+* テスト結果は自治体決裁および将来監査に耐える形式で記録する
+
+### 4.2 テスト品質基準
+
+* 必須機能：全件合格
+* 標準準拠：必須項目すべて適合
+* 重大障害：0件
+
+---
+
+## 5. テスト範囲
+
+### 5.1 対象範囲
+
+| 区分       | 内容            |
+| -------- | ------------- |
+| 機能テスト    | 標準業務機能、独自業務機能 |
+| 標準準拠テスト  | 標準仕様必須項目の適合確認 |
+| 外部連携テスト  | 国・都道府県・他自治体連携 |
+| データ移行テスト | 既存システムからの移行   |
+| 非機能テスト   | 性能、可用性、セキュリティ |
+| 運用テスト    | 運用手順、障害対応     |
+
+### 5.2 対象外範囲
+
+* （対象外とする範囲を明記）
+
+---
+
+## 6. テスト工程構成
+
+| 工程      | 目的            |
+| ------- | ------------- |
+| 単体テスト   | プログラム単位の妥当性確認 |
+| 結合テスト   | 機能間連携の確認      |
+| 総合テスト   | 業務シナリオの確認     |
+| 標準準拠テスト | 標準仕様への適合確認    |
+| 運用テスト   | 実運用想定の確認      |
+| 受入テスト   | 自治体による最終確認    |
+
+---
+
+## 7. 標準準拠テスト計画
+
+### 7.1 実施方針
+
+* 標準仕様書の必須・準拠項目をテスト観点として整理
+* Fit & Gap一覧とテスト観点を対応付け
+
+### 7.2 主な確認観点
+
+| 観点  | 内容      |
+| --- | ------- |
+| 機能  | 必須機能の有無 |
+| 画面  | 標準項目構成  |
+| 帳票  | 標準帳票形式  |
+| コード | 標準コード体系 |
+| IF  | 標準データ形式 |
+
+---
+
+## 8. 外部連携・データ移行テスト
+
+### 8.1 外部連携テスト
+
+* 正常系／異常系の送受信確認
+* タイムアウト・不正データ時の挙動確認
+
+### 8.2 データ移行テスト
+
+| 観点    | 内容      |
+| ----- | ------- |
+| 件数    | 移行前後の一致 |
+| 内容    | データ正確性  |
+| 業務    | 移行後業務確認 |
+| リハーサル | 本番想定実施  |
+
+---
+
+## 9. 非機能テスト計画
+
+| 分類     | 内容          |
+| ------ | ----------- |
+| 性能     | 同時アクセス、応答時間 |
+| 可用性    | 冗長構成、切替     |
+| セキュリティ | 認証、権限、ログ    |
+| 災害対策   | BCP、バックアップ  |
+
+---
+
+## 10. テスト体制・役割
+
+| 役割    | 主な責任  |
+| ----- | ----- |
+| 自治体   | 受入判定  |
+| PL/PM | 統括管理  |
+| SIer  | テスト実施 |
+| 運用部門  | 運用確認  |
+
+---
+
+## 11. テストスケジュール
+
+* （工程別スケジュールを記載）
+
+---
+
+## 12. 合否判定基準
+
+* 重大障害：0件
+* 軽微障害：是正計画提出
+* 標準準拠：必須項目すべて適合
+
+---
+
+## 13. リスク・留意事項
+
+| リスク      | 対応策    |
+| -------- | ------ |
+| 標準仕様解釈差異 | 事前レビュー |
+| 連携先遅延    | 代替テスト  |
+
+---
+
+## 14. 承認
+
+| 区分 | 氏名 | 日付 |
+| -- | -- | -- |
+| 作成 |    |    |
+| 確認 |    |    |
+| 承認 |    |    |
+
+---
+---
+
+# ◆ 標準準拠テスト観点チェックリスト（自治体システム標準準拠）
+
+## 1. 本チェックリストの位置づけ
+
+本チェックリストは、デジタル庁が定める自治体情報システム標準仕様書に対し、
+対象システムが**必須項目・準拠項目を満たしていることをテストにより客観的に確認**するためのものである。
+
+全体テスト計画書および Fit & Gap 一覧と対応付けて使用し、
+自治体決裁および監査対応の証跡として保存することを前提とする。
+
+---
+
+## 2. チェック方法・判定ルール
+
+* 判定区分：○（適合）／△（条件付き適合）／×（不適合）／－（対象外）
+* △の場合は必ず条件・補足を記載する
+* ×が存在する場合は是正方針・対応計画を明記する
+
+---
+
+## 3. 標準準拠テスト観点一覧
+
+### 3.1 機能要件（必須機能）
+
+| No   | 観点     | 標準仕様参照 | 確認内容              | 判定 | 備考 |
+| ---- | ------ | ------ | ----------------- | -- | -- |
+| F-01 | 必須機能実装 | 機能要件1章 | 標準必須機能が全て実装されているか |    |    |
+| F-02 | 業務フロー  | 機能要件2章 | 標準業務フローどおりに処理可能か  |    |    |
+| F-03 | 処理結果   | 機能要件3章 | 標準で定義された処理結果となるか  |    |    |
+
+---
+
+### 3.2 画面・UI要件
+
+| No    | 観点   | 標準仕様参照 | 確認内容            | 判定 | 備考 |
+| ----- | ---- | ------ | --------------- | -- | -- |
+| UI-01 | 画面項目 | 画面要件1章 | 必須項目が欠落なく表示されるか |    |    |
+| UI-02 | 入力制御 | 画面要件2章 | 桁数・必須制御が標準どおりか  |    |    |
+| UI-03 | 表示文言 | 画面要件3章 | 標準文言との差異がないか    |    |    |
+
+---
+
+### 3.3 帳票・出力要件
+
+| No   | 観点    | 標準仕様参照 | 確認内容             | 判定 | 備考 |
+| ---- | ----- | ------ | ---------------- | -- | -- |
+| R-01 | 帳票種別  | 帳票要件1章 | 標準帳票が出力可能か       |    |    |
+| R-02 | 出力形式  | 帳票要件2章 | PDF/CSV形式が標準どおりか |    |    |
+| R-03 | レイアウト | 帳票要件3章 | 項目順・表記が一致するか     |    |    |
+
+---
+
+### 3.4 データ・コード体系要件
+
+| No   | 観点    | 標準仕様参照  | 確認内容            | 判定 | 備考 |
+| ---- | ----- | ------- | --------------- | -- | -- |
+| D-01 | 標準コード | データ要件1章 | 標準コード体系を使用しているか |    |    |
+| D-02 | データ型  | データ要件2章 | 桁数・型が一致しているか    |    |    |
+| D-03 | 管理方法  | データ要件3章 | 独自拡張がルール内か      |    |    |
+
+---
+
+### 3.5 外部インターフェース要件
+
+| No    | 観点    | 標準仕様参照 | 確認内容            | 判定 | 備考 |
+| ----- | ----- | ------ | --------------- | -- | -- |
+| IF-01 | データ形式 | IF要件1章 | 標準フォーマットで送受信可能か |    |    |
+| IF-02 | 項目対応  | IF要件2章 | 必須項目が欠落していないか   |    |    |
+| IF-03 | 異常系   | IF要件3章 | エラー時の挙動が標準どおりか  |    |    |
+
+---
+
+### 3.6 非機能・運用要件（標準関連）
+
+| No   | 観点    | 標準仕様参照   | 確認内容            | 判定 | 備考 |
+| ---- | ----- | -------- | --------------- | -- | -- |
+| N-01 | ログ出力  | 運用要件1章   | 標準で求めるログが取得可能か  |    |    |
+| N-02 | 権限制御  | セキュリティ要件 | 標準権限モデルに準拠しているか |    |    |
+| N-03 | データ保全 | 運用要件2章   | 保存・削除ルールが標準どおりか |    |    |
+
+---
+
+## 4. 総合判定
+
+| 判定区分   | 判定結果 |
+| ------ | ---- |
+| 必須項目適合 |      |
+| 準拠項目適合 |      |
+| 不適合件数  |      |
+
+---
+
+## 5. 是正・対応方針（不適合がある場合）
+
+| No | 不適合内容 | 対応方針 | 対応期限 |
+| -- | ----- | ---- | ---- |
+|    |       |      |      |
+
+---
+
+## 6. 承認
+
+| 区分 | 氏名 | 日付 |
+| -- | -- | -- |
+| 作成 |    |    |
+| 確認 |    |    |
+| 承認 |    |    |
+
+---
+
+この「標準準拠テスト観点チェックリスト（自治体システム）」は、
+
+* **デジタル庁標準仕様 × テスト結果の証跡化**
+* **Fit & Gap 一覧との一対一対応**
+* **自治体決裁・将来監査に耐える形式**
+
+を前提にした **実務・公式利用レベル** です。
+
+---
+
+## 実務での使い方（重要）
+
+### ① 作成・レビューの流れ
+
+1. **SIerが一次記入（判定・エビデンス）**
+2. **PL/PMが妥当性レビュー**
+3. **△／×のみ自治体説明用コメントを追記**
+4. **全体テスト結果報告書へ転記**
+
+### ② 決裁でよく見られるポイント
+
+* 「必須項目 × がないか」
+* 「△ の条件が妥当か（将来是正含む）」
+* 「独自拡張が標準逸脱になっていないか」
+
+---
+---
+# ◆ テスト工程表（Excel想定）
+
+## 1. 本工程表の位置づけ
+
+本工程表は、自治体情報システム標準準拠に基づく全体テスト計画に沿い、
+各テスト工程の**期間・責任者・成果物・判定ポイント**を明確化し、
+進捗管理および自治体決裁・監査対応に使用することを目的とする。
+
+※ 本様式は Excel での管理を前提としている。
+
+---
+
+## 2. テスト工程一覧（全体）
+
+| No | 工程名     | 開始日 | 終了日 | 主担当       | 自治体関与 | 主な成果物       | 合否判定主体 |
+| -- | ------- | --- | --- | --------- | ----- | ----------- | ------ |
+| 1  | 単体テスト   |     |     | SIer      | －     | 単体テスト結果     | SIer   |
+| 2  | 結合テスト   |     |     | SIer      | －     | 結合テスト結果     | SIer   |
+| 3  | 総合テスト   |     |     | SIer      | 確認    | 総合テスト結果     | PL/PM  |
+| 4  | 標準準拠テスト |     |     | SIer      | 確認    | 標準準拠チェックリスト | 自治体    |
+| 5  | 運用テスト   |     |     | SIer＋運用部門 | 確認    | 運用テスト結果     | 自治体    |
+| 6  | 受入テスト   |     |     | 自治体       | 主体    | 受入テスト結果     | 自治体    |
+
+---
+
+## 3. 工程別 詳細工程表（WBS形式）
+
+### 3.1 単体テスト
+
+| WBS | 作業内容      | 開始日 | 終了日 | 担当   | 成果物  | 備考    |
+| --- | --------- | --- | --- | ---- | ---- | ----- |
+| 1-1 | テストケース作成  |     |     | SIer | 単体TC | 設計書準拠 |
+| 1-2 | 単体テスト実施   |     |     | SIer | 実施ログ |       |
+| 1-3 | 障害修正・再テスト |     |     | SIer | 修正記録 |       |
+
+---
+
+### 3.2 結合テスト
+
+| WBS | 作業内容      | 開始日 | 終了日 | 担当   | 成果物  | 備考     |
+| --- | --------- | --- | --- | ---- | ---- | ------ |
+| 2-1 | 結合TC作成    |     |     | SIer | 結合TC | IF仕様反映 |
+| 2-2 | 結合テスト実施   |     |     | SIer | 実施ログ |        |
+| 2-3 | 障害修正・再テスト |     |     | SIer | 修正記録 |        |
+
+---
+
+### 3.3 総合テスト
+
+| WBS | 作業内容      | 開始日 | 終了日 | 担当   | 成果物  | 備考   |
+| --- | --------- | --- | --- | ---- | ---- | ---- |
+| 3-1 | 業務シナリオ整理  |     |     | SIer | シナリオ | 標準業務 |
+| 3-2 | 総合テスト実施   |     |     | SIer | 結果報告 |      |
+| 3-3 | 障害修正・再テスト |     |     | SIer | 修正記録 |      |
+
+---
+
+### 3.4 標準準拠テスト
+
+| WBS | 作業内容       | 開始日 | 終了日 | 担当    | 成果物     | 備考        |
+| --- | ---------- | --- | --- | ----- | ------- | --------- |
+| 4-1 | 観点整理（標準仕様） |     |     | PL/PM | 観点一覧    | Fit&Gap対応 |
+| 4-2 | 標準準拠テスト実施  |     |     | SIer  | チェックリスト |           |
+| 4-3 | 判定・是正方針整理  |     |     | 自治体   | 判定結果    | 決裁資料      |
+
+---
+
+### 3.5 運用テスト
+
+| WBS | 作業内容     | 開始日 | 終了日 | 担当   | 成果物    | 備考   |
+| --- | -------- | --- | --- | ---- | ------ | ---- |
+| 5-1 | 運用シナリオ作成 |     |     | SIer | 運用シナリオ |      |
+| 5-2 | 運用テスト実施  |     |     | 運用部門 | 結果報告   | 障害対応 |
+| 5-3 | 是正・手順修正  |     |     | SIer | 改訂手順   |      |
+
+---
+
+### 3.6 受入テスト
+
+| WBS | 作業内容    | 開始日 | 終了日 | 担当  | 成果物  | 備考 |
+| --- | ------- | --- | --- | --- | ---- | -- |
+| 6-1 | 受入テスト計画 |     |     | 自治体 | 計画書  |    |
+| 6-2 | 受入テスト実施 |     |     | 自治体 | 結果報告 |    |
+| 6-3 | 稼働可否判定  |     |     | 自治体 | 判定書  | 決裁 |
+
+---
+
+## 4. 進捗・管理ルール（Excel運用）
+
+* ステータス列（未着手／実施中／完了／遅延）を追加
+* 遅延時は理由・是正策を必須記載
+* 自治体レビュー工程は強調表示（色分け）
+
+---
+
+## 5. 備考
+
+* 本工程表は全体テスト計画書と一体で管理する
+* 工程変更時は自治体承認を要する
+
+---
+
+この「テスト工程表（Excel想定・自治体標準準拠）」は、
+
+* **全体テスト計画書と完全整合**
+* **自治体決裁・監査で説明できる責任分界**
+* **SIer進捗管理（WBS）と自治体判定ポイントの可視化**
+
+を同時に満たす構成です。
+
+---
+
+## 実務での使いどころ（重要）
+
+### ① Excelでの典型運用
+
+* 「開始日／終了日／ステータス／遅延理由」列を追加
+* **工程No単位で進捗集計**（自治体報告用）
+* 標準準拠テスト・受入テスト行は**色付き・固定行**
+
+### ② 決裁・レビューで見られる点
+
+* 標準準拠テストが**独立工程**として存在するか
+* 合否判定主体が**自治体になっているか**
+* 受入テスト前に**是正・判定工程**が挟まっているか
+
+---
+---
+
+# ◆ テスト結果報告書（自治体システム標準準拠）
+
+## 1. 文書情報
+
+| 項目     | 内容                        |
+| ------ | ------------------------- |
+| 文書名    | テスト結果報告書                  |
+| 対象システム | （システム名称）                  |
+| 対象業務   | （標準業務名／独自業務名）             |
+| テスト期間  | YYYY年MM月DD日 ～ YYYY年MM月DD日 |
+| 作成日    | YYYY年MM月DD日               |
+| 作成者    | （事業者名）                    |
+| 確認者    | （PL/PM名）                  |
+| 承認者    | （自治体名／部課名）                |
+| 版数     | Ver.X.X                   |
+
+---
+
+## 2. 報告書の目的
+
+本書は、デジタル庁が定める自治体情報システム標準仕様書に基づき実施した
+各種テストの結果を取りまとめ、
+**対象システムが本番稼働可能であるか否かを自治体として判断するための資料**として報告するものである。
+
+---
+
+## 3. テスト実施概要
+
+### 3.1 実施したテスト工程
+
+| No | テスト工程   | 実施状況 | 主担当       |
+| -- | ------- | ---- | --------- |
+| 1  | 単体テスト   | 完了   | SIer      |
+| 2  | 結合テスト   | 完了   | SIer      |
+| 3  | 総合テスト   | 完了   | SIer      |
+| 4  | 標準準拠テスト | 完了   | SIer／自治体  |
+| 5  | 運用テスト   | 完了   | SIer／運用部門 |
+| 6  | 受入テスト   | 完了   | 自治体       |
+
+---
+
+## 4. テスト結果サマリ（決裁要点）
+
+### 4.1 全体結果一覧
+
+| 区分       | 実施件数 | 合格 | 条件付き合格（△） | 不合格（×） |
+| -------- | ---- | -- | --------- | ------ |
+| 機能テスト    |      |    |           |        |
+| 標準準拠テスト  |      |    |           |        |
+| 外部連携テスト  |      |    |           |        |
+| データ移行テスト |      |    |           |        |
+| 非機能テスト   |      |    |           |        |
+
+---
+
+### 4.2 重要指摘事項一覧（×／△）
+
+| No | 区分 | 内容 | 影響 | 対応方針 | 対応期限 |
+| -- | -- | -- | -- | ---- | ---- |
+|    |    |    |    |      |      |
+
+---
+
+## 5. 標準準拠テスト結果
+
+### 5.1 総合判定
+
+| 判定項目   | 判定結果 |
+| ------ | ---- |
+| 必須項目適合 |      |
+| 準拠項目適合 |      |
+| 不適合件数  |      |
+
+### 5.2 不適合・条件付き項目一覧
+
+| No | 標準仕様参照 | 内容 | 判定 | 是正方針 |
+| -- | ------ | -- | -- | ---- |
+|    |        |    |    |      |
+
+※ 詳細は「標準準拠テスト観点チェックリスト」を参照
+
+---
+
+## 6. 外部連携・データ移行テスト結果
+
+### 6.1 外部連携テスト結果
+
+| 連携先 | 結果 | 備考 |
+| --- | -- | -- |
+|     |    |    |
+
+### 6.2 データ移行テスト結果
+
+| 観点   | 結果 | 備考 |
+| ---- | -- | -- |
+| 件数一致 |    |    |
+| 内容一致 |    |    |
+| 業務影響 |    |    |
+
+---
+
+## 7. 非機能・運用テスト結果
+
+| 分類     | 結果 | 備考 |
+| ------ | -- | -- |
+| 性能     |    |    |
+| 可用性    |    |    |
+| セキュリティ |    |    |
+| 運用     |    |    |
+
+---
+
+## 8. 総合評価および稼働可否判断
+
+### 8.1 総合評価
+
+（本番稼働に支障となる問題の有無、条件付き事項の整理）
+
+### 8.2 稼働可否判定（案）
+
+* □ 本番稼働可
+* □ 条件付き本番稼働可（条件：　　　　　　　　　　　　）
+* □ 本番稼働不可
+
+---
+
+## 9. 今後の対応事項（稼働後含む）
+
+| No | 内容 | 対応者 | 期限 |
+| -- | -- | --- | -- |
+|    |    |     |    |
+
+---
+
+## 10. 添付資料一覧
+
+* 全体テスト計画書
+* テスト工程表
+* 標準準拠テスト観点チェックリスト
+* 各工程テスト結果詳細
+
+---
+
+## 11. 承認
+
+| 区分 | 氏名 | 日付 |
+| -- | -- | -- |
+| 作成 |    |    |
+| 確認 |    |    |
+| 承認 |    |    |
+
+---
+
+この「テスト結果報告書（自治体決裁用）」はこれまで作成した
+
+* 全体テスト計画書
+* 標準準拠テスト観点チェックリスト
+* テスト工程表（Excel想定）
+
+と **完全に対応関係が取れる“決裁専用フォーマット”** です。
+
+---
+
+## この報告書の強み（自治体決裁・監査向け）
+
+### ① 決裁者が最初に見るべき情報が先頭に集約
+
+* **4章：テスト結果サマリ**
+* **5章：標準準拠テスト総合判定**
+* **8章：稼働可否判断（案）**
+
+👉 技術詳細を読まなくても判断可能
+
+---
+
+### ② 「標準準拠」を明確に分離
+
+* 標準準拠テスト結果を **独立章（5章）** として明示
+* Fit & Gap／チェックリストへの参照を明文化
+  → **デジタル庁・監査対応で非常に重要**
+
+---
+
+### ③ 条件付き稼働を公式に扱える構成
+
+* △／× を **4.2／5.2／8章** で一貫管理
+* 稼働後是正・条件付き承認を想定済み
+  → 実務でよくある「完全OKではない」ケースに対応
+
+---
+
+## 実務での使い方（おすすめフロー）
+
+1. **SIer**
+
+   * 各工程の詳細結果を提出
+2. **PL/PM支援**
+
+   * 4章・5章・8章のみを精査・修正
+3. **自治体**
+
+   * 8章「稼働可否判定（案）」で決裁
+
+---
+---
+# ◆ 是正指示書（SIer向け・自治体システム標準準拠）
+
+## 1. 文書情報
+
+| 項目     | 内容                |
+| ------ | ----------------- |
+| 文書名    | 是正指示書             |
+| 対象システム | （システム名称）          |
+| 対象業務   | （標準業務名／独自業務名）     |
+| 指示日    | YYYY年MM月DD日       |
+| 指示者    | （自治体名／部課名）        |
+| 宛先     | （SIer名）           |
+| 根拠文書   | テスト結果報告書（Ver.X.X） |
+| 版数     | Ver.X.X           |
+
+---
+
+## 2. 是正指示の目的
+
+本書は、自治体情報システム標準準拠に基づき実施した各種テストの結果、
+**標準仕様への不適合事項または条件付き適合事項が確認された点について、
+是正対応を正式に指示すること**を目的とする。
+
+本是正は、本番稼働判定および将来の監査対応を見据え、
+対象システムの品質および標準準拠性を確保するために実施するものである。
+
+---
+
+## 3. 是正指示の位置づけ
+
+* 本是正指示は、全体テスト計画書およびテスト結果報告書に基づく正式な指示である
+* 是正完了は、自治体による確認・承認をもって完了とする
+* 期限内に是正が完了しない場合、本番稼働判定に影響する可能性がある
+
+---
+
+## 4. 是正指示事項一覧
+
+### 4.1 標準準拠に関する是正指示
+
+| No | 区分    | 標準仕様参照 | 指摘内容 | 是正内容 | 対応期限 | 再確認方法 |
+| -- | ----- | ------ | ---- | ---- | ---- | ----- |
+|    | 必須／準拠 |        |      |      |      | 再テスト  |
+
+---
+
+### 4.2 機能・非機能に関する是正指示
+
+| No | 区分     | 指摘内容 | 是正内容 | 影響範囲 | 対応期限 | 再確認方法 |
+| -- | ------ | ---- | ---- | ---- | ---- | ----- |
+|    | 機能／非機能 |      |      |      |      | 再テスト  |
+
+---
+
+## 5. 是正対応に関するルール
+
+* 是正対応内容は、必ず**是正内容欄に具体的に記載**すること
+* 設計変更を伴う場合は、影響範囲を明確にすること
+* 是正後は、該当テストケースの再実施結果を提出すること
+* 再テスト結果は証跡として保存可能な形式とすること
+
+---
+
+## 6. 是正完了判定基準
+
+| 判定観点 | 基準          |
+| ---- | ----------- |
+| 標準準拠 | 必須項目すべて適合   |
+| 品質   | 重大障害なし      |
+| 証跡   | 再テスト結果が確認可能 |
+
+---
+
+## 7. 是正対応スケジュール
+
+| No | 作業内容  | 開始日 | 終了日 | 担当   |
+| -- | ----- | --- | --- | ---- |
+|    | 是正対応  |     |     | SIer |
+|    | 再テスト  |     |     | SIer |
+|    | 確認・承認 |     |     | 自治体  |
+
+---
+
+## 8. 本番稼働判定への影響
+
+* 本是正指示事項が期限内に完了しない場合、
+  **本番稼働可否判定を「条件付き」または「不可」とする可能性がある**。
+* 是正完了後、必要に応じてテスト結果報告書を改訂する。
+
+---
+
+## 9. 添付資料
+
+* テスト結果報告書（該当箇所抜粋）
+* 標準準拠テスト観点チェックリスト（該当箇所）
+
+---
+
+## 10. 承認
+
+| 区分 | 氏名 | 日付 |
+| -- | -- | -- |
+| 作成 |    |    |
+| 確認 |    |    |
+| 承認 |    |    |
+
+---
+
+この「SIer向け是正指示書（正式文書）」は **自治体 → SIer への公式是正指示** として、そのまま文書発出できる体裁・表現レベルです。
+
+---
+
+## この是正指示書のポイント（実務・統制視点）
+
+### ① 「お願い」ではなく**正式指示**
+
+* 根拠文書：**テスト結果報告書 Ver.明記**
+* 期限超過＝**本番稼働判定へ影響**を明文化
+  → 監査・紛争時に「口頭指示ではない」ことを担保
+
+---
+
+### ② 標準準拠是正を最優先に分離
+
+* **4.1 標準準拠に関する是正指示** を独立章立て
+* 必須／準拠の区分を明示
+  → デジタル庁標準対応で極めて重要
+
+---
+
+### ③ 再テスト・証跡前提の構造
+
+* 是正 → 再テスト → 自治体確認 → 承認
+  という **統制フローを明文化**
+* 「直しました」では終わらない構成
+
+---
+
+## 実務での使い方（おすすめ）
+
+1. **テスト結果報告書 4章・5章** から ×／△ を抽出
+2. 本是正指示書の **4章に転記**
+3. 期限・影響を PL/PM が精査
+4. 自治体名義で SIer に正式発出
+
+---
+
+## これで一式が“完成形”です
+
+現在そろっている成果物：
+
+* 全体テスト計画書
+* 標準準拠テスト観点チェックリスト
+* テスト工程表（Excel想定）
+* テスト結果報告書（決裁用）
+* **SIer向け是正指示書（正式文書）** ✅
+
+---
