--- a/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
+++ b/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
@@ -10,6 +10,9 @@
   - 画面ロックの徹底（Win+L）
   - パスワード管理（定期的変更、複雑さ）
   - 情報漏洩防止の具体例
+- パソコン基本操作詳細説明
+  - Ctrl+C/V/X/Z/Y
+  - 画面チャプチャー方法
 - 緊急時の対応フロー
   - 誰に、どう報告するか
 
@@ -18,6 +21,7 @@
 - ディレクトリ操作:
   - `pwd`, `ls`, `ls -la`, `cd`
   - `mkdir`, `rmdir`
+  - `↑`キー
 - パスの概念（絶対パス/相対パス）
 - **演習**: 指定ディレクトリ構造の作成
 
