--- a/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
+++ b/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
@@ -9,6 +9,7 @@
   - USBメモリ禁止の実例と理由
   - 画面ロックの徹底（Win+L）
   - パスワード管理（定期的変更、複雑さ）
+  - メール送信先確認徹底（同名誤送）
   - 情報漏洩防止の具体例
 - パソコン基本操作詳細説明
   - Ctrl+C/V/X/Z/Y
