--- a/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
+++ b/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
@@ -16,6 +16,9 @@
   - 画面チャプチャー方法
 - 緊急時の対応フロー
   - 誰に、どう報告するか
+- 企業文化
+  - ほうれん草（報告・連絡・相談）
+  - 5S（整理・整頓・清掃・清潔・しつけ）
 
 **13:00-15:00: Linux入門（ディレクトリ操作）**
 - ターミナル基本操作
