--- a/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
+++ b/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
@@ -19,7 +19,7 @@
 - 企業文化など
   - ほうれん草（報告・連絡・相談）
   - 5S（整理・整頓・清掃・清潔・しつけ）
-  - 5W1H(What / Why / Who / When / Where / How)
+  - 5W1H(What：なに / Why：なぜ / Who：だれ / When：いつ / Where：どこ / How：どうする)
 
 **13:00-15:00: Linux入門（ディレクトリ操作）**
 - ターミナル基本操作
