--- a/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
+++ b/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
@@ -53,6 +53,7 @@
 ---
 
 ### **Day 3（2月9日）4時間: Excelショートカット基礎**
+#### ※可能であれば、実際の業務で使用している「監視ログ表」などを利用したいと考えております。
 **10:00-12:00: Excel操作の基本**
 - Excel画面の構成理解
 - 基本ショートカット（移動・選択）:
@@ -174,9 +175,19 @@
 - **Day 7**: 総合実技試験
 - **最終成果物**: 監視レポートサンプル（Linux+Excel連携）
 
-### **【OJTスムーズ移行のための準備】**
-1. 研修最終日にOJTメンターとの顔合わせ
-2. 研修で学んだ内容とOJT業務の関連性を明確化
-3. 質問・報告のテンプレート提供
+### **【今後、OJTでさらに強化する内容】**
+
+1. **業務フローの理解**<br>
+   　（発見 → 記録 → 報告）
+
+2. **問い合わせ対応の基本対応パターン**<br>
+   　- 電話・メールにおける定型フレーズ<br>
+   　- 問い合わせログへの記入（5W1H）<br>
+   　- 「確認します」といった一次対応の返答練習<br>
+
+3. **障害報告の基本対応パターン**<br>
+   　- 障害報告テンプレートの記入方法<br>
+   　- 5W1Hを意識した記載練習<br>
+   　- エスカレーション先および緊急連絡網の確認
 
 このスケジュールでは、限られた時間で最大限の効果を上げるため、余分な内容を削ぎ落とし、監視業務に直結するスキルに特化しています。
