--- a/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
+++ b/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
@@ -22,10 +22,12 @@
 
 **13:00-15:00: Linux入門（ディレクトリ操作）**
 - ターミナル基本操作
+  - コピー貼り付け
 - ディレクトリ操作:
   - `pwd`, `ls`, `ls -la`, `cd`
   - `mkdir`, `rmdir`
-  - `↑`キー
+  - `↑`キーの使い方
+  - `→`キーの使い方
 - パスの概念（絶対パス/相対パス）
 - **演習**: 指定ディレクトリ構造の作成
 
