--- a/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
+++ b/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
@@ -8,7 +8,7 @@
 - セキュリティポリシー詳細説明
   - USBメモリ禁止の実例と理由
   - 画面ロックの徹底（Win+L）
-  - メール送信先確認徹底（同名誤送）
+  - メール送信原則（送信先確認、同名送信防止、アドレス帳定期整理）
   - 情報漏洩防止の具体例
 - パソコン基本操作詳細説明
   - Ctrl+C/V/X/Z/Y
