--- a/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
+++ b/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
@@ -12,7 +12,7 @@
   - 情報漏洩防止の具体例
 - パソコン基本操作詳細説明
   - Ctrl+C/V/X/Z/Y
-  - 画面チャプチャー方法
+  - 画面チャプチャー方法（Snipping Toolの使用方法）
 - 緊急時の対応フロー
   - 誰に、どう報告するか
 - 企業文化など
