--- a/01_開発/77_新人教育/正規表現.md
+++ b/01_開発/77_新人教育/正規表現.md
@@ -493,7 +493,7 @@ grep -E "\b[0-9]{4}-[0-9]{4}-[0-9]{4}-[0-9]{4}\b" data.txt
 ## 【参考：正規表現ビジュアライザー】
 
 理解を深めるためのツール：
-1. **regex101.com** - オンライン正規表現テスター
+1. **[regex101.com](https://regex101.com/)** - オンライン正規表現テスター
 2. **debuggex.com** - 正規表現を図解
 3. **rubular.com** - シンプルなテスト環境
 
