--- a/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
+++ b/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
@@ -35,6 +35,7 @@
 
 ### **Day 2（2月6日）4時間: Linuxファイル操作集中**
 **10:00-12:00: ファイル基本操作**
+- 前日内容復習:
 - ファイル操作コマンド:
   - `touch`, `cp`, `mv`, `rm`
   - オプション解説（`-r`, `-f`の危険性）
@@ -56,6 +57,7 @@
 ### **Day 3（2月9日）4時間: Excelショートカット基礎**
 #### ※可能であれば、実際の業務で使用している「監視ログ表」などを利用したいと考えております。
 **10:00-12:00: Excel操作の基本**
+- 前日内容復習:
 - Excel画面の構成理解
 - 基本ショートカット（移動・選択）:
   - 方向キー、Ctrl+方向キー
@@ -76,6 +78,7 @@
 
 ### **Day 4（2月10日）4時間: Excel応用操作**
 **10:00-12:00: データ操作・書式**
+- 前日内容復習:
 - 書式設定:
   - Ctrl+1、Ctrl+B/I/U
   - セルの書式設定ダイアログ
@@ -96,6 +99,7 @@
 
 ### **Day 5（2月12日）2時間: Linux+Excel連携①**
 **10:00-11:00: Linuxデータ抽出**
+- 前日内容復習:
 - 実践シナリオ:
   - ログファイルから特定条件のデータ抽出
   - CSV形式での保存
@@ -114,6 +118,7 @@
 
 ### **Day 6（2月13日）2時間: Linux+Excel連携②**
 **10:00-11:00: 実践演習**
+- 前日内容復習:
 - 統合シナリオ演習:
   ```
   1. Linux: 複数ログファイルからエラーを抽出
@@ -134,6 +139,7 @@
 
 ### **Day 7（2月16日）2時間: 総合評価・OJT準備**
 **10:00-11:00: 実技試験**
+- 前日内容復習:
 - 簡単な実技テスト（30分）:
   - Linux: ログファイルからデータ抽出
   - Excel: 抽出データのレポート化
