--- a/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
+++ b/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
@@ -40,7 +40,7 @@
   - `touch`, `cp`, `mv`, `rm`
   - オプション解説（`-r`, `-f`の危険性）
 - ファイル閲覧:
-  - `cat`, `less`, `tail`, `head`
+  - `cat`, `less`, `more`, `tail`, `head`
 - **演習**: ログファイルの作成・コピー・閲覧
 
 **13:00-15:00: 実践的ファイル操作**
