--- a/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
+++ b/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
@@ -73,6 +73,10 @@
   - F2、Enter、Tab
   - Ctrl+C/V/X/Z/Y
   - Ctrl+D/R（フィル）
+- マウス操作の基本:
+  - ダブルクリック
+  - ドラッグ＆ドロップ
+  - 右クリックメニュー
 - **演習**: 監視ログシートへのデータ入力練習
 
 ---
