--- a/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
+++ b/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
@@ -1,6 +1,24 @@
 ## **新人基礎スキル集中研修計画**
 ### **【時間配分最適化カリキュラム】**
 
+## 【研修の目的】
+
+### 1. **業務遂行能力の確立**
+- **主要目的**: インフラ・セキュリティ監視業務に必要な最低限のPC操作スキルを習得させる
+- **具体目標**: 研修終了後、OJTにおいてメンター監督下で基本的な監視業務を実施できる
+
+### 2. **セキュリティ意識の醸成**
+- **主要目的**: 情報セキュリティの基本原則を理解し、実践できるようにする
+- **具体目標**: セキュリティポリシーに違反する行動を取らない、問題発生時の報告フローを理解する
+
+### 3. **効率的な作業習慣の形成**
+- **主要目的**: キーボードショートカットを活用した効率的なPC操作習慣を身につける
+- **具体目標**: マウスに依存しない基本操作ができる、作業時間を短縮する基本スキルを習得する
+
+### 4. **チーム連携の基盤整備**
+- **主要目的**: 報告・連絡・相談の基本を理解し、実践できるようにする
+- **具体目標**: 業務上の問題を適切なタイミングで適切な人に報告できる
+
 ---
 
 ### **Day 1（2月5日）4時間: セキュリティ徹底 + Linux基本**
