--- a/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
+++ b/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
@@ -1,4 +1,4 @@
-## **新人基礎スキル集中研修計画**
+# **新人基礎スキル集中研修計画**
 
 ## 【研修の目的】
 
@@ -20,7 +20,7 @@
 
 ---
 
-### **【時間配分最適化カリキュラム】**
+## **【時間配分最適化カリキュラム】**
 
 ---
 
