--- a/01_開発/99_管理/04_アジャイル開発管理/04_アジャイル開発体制（日本企業）.md
+++ b/01_開発/99_管理/04_アジャイル開発管理/04_アジャイル開発体制（日本企業）.md
@@ -359,9 +359,9 @@ SM（Scrum Master）
 以下に、**PO / POA / SM / 開発者（Dev Team）** の
 **実務でそのまま使えるRACI表** を整理、提示します。
 
-※ **アジャイル（Scrum）原則を崩さず**、
-※ **SI／金融・公共／大規模アジャイル** でも通用するよう、
-「理想論」ではなく **現場で説明可能な責任分界** にしています。
+> ※ **アジャイル（Scrum）原則を崩さず**、<br>
+> ※ **SI／金融・公共／大規模アジャイル** でも通用するよう、<br>
+> 「理想論」ではなく **現場で説明可能な責任分界** にしています。
 
 ---
 
@@ -492,8 +492,8 @@ SM（Scrum Master）
 
 ## ⑧ まとめ
 
-> 「このRACIでは、POが唯一のAccountableとして価値判断を行い、
-> POAが実務的なResponsibleとして意思決定を支える構造にしています。
+> 「このRACIでは、POが唯一のAccountableとして価値判断を行い、<br>
+> POAが実務的なResponsibleとして意思決定を支える構造にしています。<br>
 > Scrum原則を守りつつ、大規模案件でも破綻しない分担です。」
 
 ---
