--- a/01_開発/99_管理/04_アジャイル開発管理/02_大規模アジャイル開発.md
+++ b/01_開発/99_管理/04_アジャイル開発管理/02_大規模アジャイル開発.md
@@ -230,6 +230,22 @@ Story（How）
 Increment（Value）
 ```
 
+### 階層構造のイメージ
+
+一般的に以下の順序で細分化されます。
+
+```
+[最上位] テーマ (Theme) / ポートフォリオ
+   ↓
+イニシアチブ (Initiative)
+   ↓
+エピック (Epic)
+   ↓
+ユーザーストーリー (User Story)
+   ↓
+[最下位] タスク (Task)
+```
+
 ---
 
 
