--- a/01_開発/99_管理/04_アジャイル開発管理/01_アジャイル開発の概要.md
+++ b/01_開発/99_管理/04_アジャイル開発管理/01_アジャイル開発の概要.md
@@ -1,6 +1,6 @@
 # ◆ アジャイル開発
 
-以下では、**アジャイル開発（Scrumを中心）**における作業を、
+以下では、**アジャイル開発**（**Scrumを中心**）における作業を、
 **①全体構造 → ②作業管理 → ③各工程・タスクの詳細（入力・手順・方法・成果物） → ④役割別視点 → ⑤実務上の注意点**
 という流れで、**実務レベル**まで掘り下げて説明します。
 
