--- a/01_開発/99_管理/04_アジャイル開発管理/04_アジャイル開発体制（日本企業）.md
+++ b/01_開発/99_管理/04_アジャイル開発管理/04_アジャイル開発体制（日本企業）.md
@@ -1,6 +1,6 @@
 # ◆ アジャイル開発体制（日本企業）
 
-以下では、**アジャイル／Scrum体制（特に日本企業・SIer・金融／公共案件で現実的に成立する体制）**を前提に、
+以下では、**アジャイル／Scrum体制**（**特に日本企業・SIer・金融／公共案件で現実的に成立する体制**）を前提に、
 **PO／POA（Proxy PO）／SM／開発チーム**それぞれについて、
 
 * ① 役割の本質
