--- a/01_開発/99_管理/04_アジャイル開発管理/02_大規模アジャイル開発.md
+++ b/01_開発/99_管理/04_アジャイル開発管理/02_大規模アジャイル開発.md
@@ -235,7 +235,7 @@ Increment（Value）
 一般的に以下の順序で細分化されます。
 
 ```
-[最上位] テーマ (Theme) / ポートフォリオ
+[最上位] ポートフォリオ / テーマ (Theme)
    ↓
 イニシアチブ (Initiative)
    ↓
