--- a/01_開発/99_管理/04_アジャイル開発管理/02_大規模アジャイル開発.md
+++ b/01_開発/99_管理/04_アジャイル開発管理/02_大規模アジャイル開発.md
@@ -1,6 +1,6 @@
 # ◆ 大規模アジャイル（SAFe）開発
 
-以下では、**大規模アジャイル（SAFe：Scaled Agile Framework）**を中心に、
+以下では、**大規模アジャイル**（**SAFe：Scaled Agile Framework**）を中心に、
 **①全体構造 → ②レイヤー別作業構造 → ③各作業の詳細（入力・タスク・成果物） → ④作業管理・指標 → ⑤実務上の勘所**
 という順で、**実案件（数十〜数百名規模）で使える粒度**で整理します。
 
