--- a/01_開発/01_企画/ITコンサルタント/02_ITコンサルタント作業詳細.md
+++ b/01_開発/01_企画/ITコンサルタント/02_ITコンサルタント作業詳細.md
@@ -1,7 +1,7 @@
 # ITコンサルタントの作業詳細
 
 以下では、**IT業界におけるコンサルタント（ITコンサルタント／システムコンサルタント／DXコンサルタントなど）**が実際に行う作業内容を、
-**①前提条件・入手情報 → ②タスク → ③方法 → ④成果物** の流れで、できる限り具体的に整理してご説明します。
+**①前提条件・入手情報 → ②タスク → ③方法 → ④成果物** の流れで、できる限り具体的に整理します。
 
 ---
 
