--- a/01_開発/01_企画/ITコンサルタント/01_ITコンサルタント.md
+++ b/01_開発/01_企画/ITコンサルタント/01_ITコンサルタント.md
@@ -2,7 +2,7 @@
 
 # ◆ ITコンサルタントの主要作業
 
-以下では、**IT業界におけるコンサルタントの具体的な作業内容（タスク・方法・成果物）を、実務レベルでわかりやすく**整理して説明します。
+以下では、**IT業界におけるコンサルタントの具体的な作業内容（タスク・方法・成果物）を、実務レベルでわかりやすく**整理します。
 「システム開発」「運用改善」「経営×IT戦略」などの一般的なコンサル業務を横断的にまとめています。
 
 ---
