--- a/01_開発/01_企画/ITコンサルタント/03_初期収支計画.md
+++ b/01_開発/01_企画/ITコンサルタント/03_初期収支計画.md
@@ -2,7 +2,7 @@
 # 🟦 初期収支計画
 
 以下では、**ITシステム開発プロジェクトにおける「初期収支計画（売上・原価・利益の算出）」**について、
-**PM/PMO・ITコンサル・ベンダー管理の実務レベル**で詳しく整理してご説明します。
+**PM/PMO・ITコンサル・ベンダー管理の実務レベル**で詳しく整理します。
 
 実際のプロジェクトで使用できるよう、
 **計算式・判断基準・チェックポイント・会計/見積の考え方**まで踏み込みます。
