--- a/01_開発/01_企画/ITコンサルタント/04_ビジネス分析.md
+++ b/01_開発/01_企画/ITコンサルタント/04_ビジネス分析.md
@@ -1,7 +1,7 @@
 # ◆ ビジネス分析
 
 以下では、**ITコンサルタントにおけるビジネス分析**（**Business Analysis**）を、
-**実務でそのまま使える粒度**で体系的に説明します。
+**実務でそのまま使える粒度**で体系的に整理します。
 （※業務改革・DX・基幹刷新・クラウド移行・AI導入など、ほぼ全案件で共通する内容です）
 
 ---
