--- a/01_開発/01_企画/03_スマートスケジュールの設定.md
+++ b/01_開発/01_企画/03_スマートスケジュールの設定.md
@@ -1,6 +1,6 @@
 
 # スマートスケジュール設定
-IT開発における「スマートスケジュール」の設定方法について、詳細に説明します。スマートスケジュールとは、プロジェクトの特性や過去の実績データを活用して、より現実的で効率的な工程計画を作成・管理する手法です。
+IT開発における「スマートスケジュール」の設定方法について、整理します。スマートスケジュールとは、プロジェクトの特性や過去の実績データを活用して、より現実的で効率的な工程計画を作成・管理する手法です。
 
 ---
 ## 1. スマートスケジュール設定の基本原則
